--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "codeat3/blade-solar-icons": "*",
         "filament/filament": "^3.2",
         "guzzlehttp/guzzle": "^7.2",
+        "joshembling/image-optimizer": "^1.5",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
